# dnsmadeeasy

./: Makefile  README.md  dnsmadeeasy.cabal  stack.yaml
src/Network/DNS/: DNSMadeEasy.hs  SHAHelper.hs
src/Network/DNS/DNSMadeEasy/: Types.hs
test/: Spec.hs
