name:                dnsmadeeasy
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mwotton/dnsmadeeasy#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Wotton
maintainer:          mwotton@gmail.com
copyright:           AllRightsReserved
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.DNS.DNSMadeEasy
                       Network.DNS.SHAHelper
                       Network.DNS.DNSMadeEasy.Types
  build-depends: aeson >= 0.11.1.4 && < 0.12
               , base >= 4.7 && < 5
               , bytestring
               , cereal
               , cryptohash-cryptoapi
               , crypto-api
               , dns
               , http-client
               , http-client-tls
               , servant        >= 0.7
               , servant-client >= 0.7
               , hex
               , text
               , time
               , transformers
               , yaml
  default-language:    Haskell2010

test-suite dnsmadeeasy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends: aeson
               , base
               , hspec
               , dnsmadeeasy
               , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mwotton/dnsmadeeasy
